--- a/site/cosmos/application/index/views/reg/index.html
+++ b/site/cosmos/application/index/views/reg/index.html
@@ -1572,7 +1572,7 @@
                         <table class="table-reg">
 							<tr><th>Карта:</th><td><select name="form[card_type]"><option value="VISA">VISA</option><option value="MASTERCARD">MASTERCARD</option></td></tr>
                             <tr><th>Номер лицевого счета:</th><td><input type="text" name="form[card_invoice]" class="span4 form-control validate[required,funcCall[validateCardInvoice]]" /></td></tr>
-                            <tr><th>Номер кредитной карты:</th><td><input type="text" name="form[card_nubmer]" class="span4 form-control validate[required]" /></td></tr> 
+                            <tr><th>Номер кредитной карты:</th><td><input type="text" name="form[card_number]" class="span4 form-control validate[required]" /></td></tr> 
                             <tr><th>Имя владельца:</th><td><input type="text" name="form[card_owner]" class="span4 form-control validate[required,funcCall[validateCardOwner]]" /></td></tr> 
                             <tr><th>Выдана банком:</th><td><input type="text" name="form[card_bank]" class="span4 form-control validate[required]" /></td></tr> 
                             <tr><th>Срок действия:</th>
