пакет за ваучер исправил, подтвердите согласие

--- a/site/cosmos/application/index/views/reg/index.html
+++ b/site/cosmos/application/index/views/reg/index.html
@@ -1554,7 +1554,7 @@
                             <tr><th>Подтверждение E-mail:</th><td><input type="text" name="form[email2]" class="span4 form-control validate[required,custom[email]]" /></td></tr>
                             <tr><th></th><td><div id="email-alert" style="display: none;" class="alert alert-danger"></div></td></tr>
                             <tr><th></th><td><input type="checkbox" name="form[agree]" id="license" /> Я согласен с условиями соглашения</td></tr>
-                            <tr><th></th><td><div id="license-alert" style="display: none;" class="alert alert-danger"></div></td></tr>
+                            <tr><th></th><td><div id="license-alert" style="display: none;" class="alert alert-danger">Подтвердите согласие</div></td></tr>
                             
                             <tr><th></th><td><a class="btn btn-primary" href="#" onclick="return showSecondStep(); //$(this).closest('form').submit(); return false;">Далее</a></td></tr>
                         </table>
